src/test/ui/const-generics/defaults/wrong-order.full.stderr
error: const parameters must be declared prior to defaulted parameters
  --> $DIR/wrong-order.rs:4:25
   |
LL | struct A<T = u32, const N: usize> {
   |         ----------------^-------- help: reorder the parameters: `<const N: usize, T = u32>`
   |
   = note: the expected order for parameters is: lifetimes, then consts and types, then defaulted parameters

warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/wrong-order.rs:2:27
   |
LL | #![cfg_attr(full, feature(const_generics))]
   |                           ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information

error: aborting due to previous error; 1 warning emitted

